# AI-Agents

./: README.md
agent/question_answering_agent/: .env.example  .gitignore  Dockerfile  QnA_configuration.yaml  README.md  pyproject.toml  requirements.txt
agent/question_answering_agent/src/question_answering_agent/: crew.py  main.py
agent/question_answering_agent/src/question_answering_agent/config/: agents.yaml  tasks.yaml
agent/question_answering_agent/src/question_answering_agent/tools/: custom_tool.py
rag/retrieval_agent/: .env.example  .gitignore  Dockerfile  README.md  populate_db_langchain.py  pyproject.toml  rag_configuration.yaml  requirements.txt
rag/retrieval_agent/src/db/: chroma.sqlite3
rag/retrieval_agent/src/retrieval_agent/: crew.py  main.py
rag/retrieval_agent/src/retrieval_agent/config/: agents.yaml  tasks.yaml
rag/retrieval_agent/src/retrieval_agent/tools/: custom_tool.py
test-Docker/: Dockerfile  package.json
test-Docker/src/: server.js
