[project]
name = "question_answering_agent"
version = "0.1.0"
description = "question-answering-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
question_answering_agent = "question_answering_agent.main:run"
run_crew = "question_answering_agent.main:run"
train = "question_answering_agent.main:train"
replay = "question_answering_agent.main:replay"
test = "question_answering_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
