[project]
name = "retrieval_agent"
version = "0.1.0"
description = "retrieval-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
retrieval_agent = "retrieval_agent.main:run"
run_crew = "retrieval_agent.main:run"
train = "retrieval_agent.main:train"
replay = "retrieval_agent.main:replay"
test = "retrieval_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
